fitur ubah warna background

--- a/flexboxagain.html
+++ b/flexboxagain.html
@@ -23,6 +23,12 @@
         <span></span>
         <span></span>
       </div>
+      <div class="pilihan-warna">
+        <div class="warna merah"></div>
+        <div class="warna hijau"></div>
+        <div class="warna kuning"></div>
+        <div class="warna abu-abu"></div>
+      </div>
 
       <ul>
         <li><a href="">Home</a></li>
@@ -78,6 +84,16 @@
       </div>
     </div>
 
+    <!-- Pilihan warna -->
+    <div class="background">
+      <h2>Ganti Background</h2>
+      <div class="pilihan-warna">
+        <div class="warna merah"></div>
+        <div class="warna hijau"></div>
+        <div class="warna kuning"></div>
+        <div class="warna abu-abu"></div>
+      </div>
+    </div>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
