buat running text

--- a/flexboxagain.html
+++ b/flexboxagain.html
@@ -17,17 +17,18 @@
         <h4>Irpansyah Center</h4>
       </div>
 
+      <div class="pilihan-warna">
+        <div class="warna merah" value="red"></div>
+        <div class="warna hijau" value="green"></div>
+        <div class="warna kuning" value="yellow"></div>
+        <div class="warna abu-abu" value="grey"></div>
+      </div>
+
       <div class="menu-toggle">
         <input type="checkbox" />
         <span></span>
         <span></span>
         <span></span>
-      </div>
-      <div class="pilihan-warna">
-        <div class="warna merah"></div>
-        <div class="warna hijau"></div>
-        <div class="warna kuning"></div>
-        <div class="warna abu-abu"></div>
       </div>
 
       <ul>
@@ -82,18 +83,47 @@
           </p>
         </div>
       </div>
-    </div>
 
-    <!-- Pilihan warna -->
-    <div class="background">
-      <h2>Ganti Background</h2>
-      <div class="pilihan-warna">
-        <div class="warna merah"></div>
-        <div class="warna hijau"></div>
-        <div class="warna kuning"></div>
-        <div class="warna abu-abu"></div>
+      <!-- Foto project -->
+      <div class="container-tiga">
+        <h2>My Project</h2>
+        <div class="project">
+          <div class="thumbnail">
+            <header></header>
+            <img src="img/gambar1.png" alt="" />
+          </div>
+          <div class="thumbnail">
+            <header></header>
+            <img src="img/gambar2.png" alt="" />
+          </div>
+          <div class="thumbnail">
+            <header></header>
+            <img src="img/gambar3.png" alt="" />
+          </div>
+          <div class="thumbnail">
+            <header></header>
+            <img src="img/gambar4.png" alt="" />
+          </div>
+          <div class="thumbnail">
+            <header></header>
+            <img src="img/gambar5.png" alt="" />
+          </div>
+          <div class="thumbnail">
+            <header></header>
+            <img src="img/gambar6.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <!-- Running Text -->
+      <div class="textrunning">
+        <marquee behavior="" direction=""
+          >Jangan Lupa Kunjungi Sosial Media Saya ||| Whatsapp : 0823-7622-7823 Instagram :
+          @mpai_belajo Youtube : Mpai Belajo Channel Alamat : Desa Air Itam kecamatan
+          penukal</marquee
+        >
       </div>
     </div>
+
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
