--- a/flexboxagain.html
+++ b/flexboxagain.html
@@ -117,9 +117,11 @@
       <!-- Running Text -->
       <div class="textrunning">
         <marquee behavior="" direction=""
-          >Jangan Lupa Kunjungi Sosial Media Saya ||| Whatsapp : 0823-7622-7823 Instagram :
-          @mpai_belajo Youtube : Mpai Belajo Channel Alamat : Desa Air Itam kecamatan
-          penukal</marquee
+          ><blink
+            >Jangan Lupa Kunjungi Sosial Media Saya ||| <img src="" alt="" /> : 0823-7622-7823
+            Instagram : @mpai_belajo Youtube : Mpai Belajo Channel Alamat : Desa Air Itam kecamatan
+            penukal</blink
+          ></marquee
         >
       </div>
     </div>
