menambahkan info kontak

--- a/flexboxagain.html
+++ b/flexboxagain.html
@@ -114,14 +114,38 @@
           </div>
         </div>
       </div>
+
+      <!-- Form -->
+      <div class="form">
+        <h2>Info Kontak</h2>
+        <form action="">
+          <div class="email">
+            <input type="text" name="email" id="email" placeholder="Masukan Email" />
+          </div>
+          <div class="nama">
+            <input type="text" name="nama" id="nama" placeholder="Masukan Nama" />
+          </div>
+          <div class="alamat">
+            <input type="text" name="nama" id="nama" placeholder="Masukan Alamat" />
+          </div>
+          <div class="hp">
+            <input type="text" name="nama" id="nama" placeholder="Masukan No Hp" />
+          </div>
+          <div class="comment">
+            <input type="text" name="comment" id="comment" placeholder="Masukan komentar" />
+          </div>
+          <div class="button">
+            <button type="submit">Kirim</button>
+          </div>
+        </form>
+      </div>
+      <!-- Akhir Form -->
       <!-- Running Text -->
       <div class="textrunning">
         <marquee behavior="" direction=""
-          ><blink
-            >Jangan Lupa Kunjungi Sosial Media Saya ||| <img src="" alt="" /> : 0823-7622-7823
-            Instagram : @mpai_belajo Youtube : Mpai Belajo Channel Alamat : Desa Air Itam kecamatan
-            penukal</blink
-          ></marquee
+          >Jangan Lupa Kunjungi Sosial Media Saya ||| <img src="" alt="" /> : 0823-7622-7823
+          Instagram : @mpai_belajo Youtube : Mpai Belajo Channel Alamat : Desa Air Itam kecamatan
+          penukal</marquee
         >
       </div>
     </div>
